--- a/app_pojavlauncher/src/main/assets/launcher_profiles.json
+++ b/app_pojavlauncher/src/main/assets/launcher_profiles.json
@@ -1,9 +1,9 @@
 {
   "profiles": {
     "(Default)": {
-      "name": "(Default)",
-      "lastVersionId": "1.7.10"
+      "name": "(HoldGrand)",
+      "lastVersionId": "1.12.2"
     }
   },
-  "selectedProfile": "(Default)"
+  "selectedProfile": "(HoldGrand)"
 }
