--- a/app_pojavlauncher/src/main/assets/launcher_profiles.json
+++ b/app_pojavlauncher/src/main/assets/launcher_profiles.json
@@ -10,7 +10,7 @@
 
 {
   "profiles": {
-    "(Default)": {
+    "(Minecraft)": {
       "name": "(Minecraft 1.12.2)",
       "lastVersionId": "1.12.2"
     }
